Enhance UpdateDialog showMessageDialog layout and verify installer styling